/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package org.loopring.lightcone.data;

option java_multiple_files = true;

message BytesArray {
    repeated bytes bytesList = 1;
}

message UintArray {
    repeated uint32 uintList = 1;
}

message BigIntArray {
    repeated bytes bigintList = 1;
}

///////////////////////////////////////////////////////
//
// abi functions
//
///////////////////////////////////////////////////////

message SubmitRingFunction {
    repeated BytesArray addressList = 1;
    repeated BytesArray uintArgsList = 2;
    repeated BytesArray repeatedUint = 3;
    repeated bool buyNoMoreThanBList = 4;
    repeated uint32 vList = 5;
    repeated bytes rList = 6;
    repeated bytes sList = 7;
    bytes feeRecipient = 8;
    uint32 feeSelection = 9;
}

message CancelOrderFunction {
    BytesArray addressList = 1;
    BigIntArray OrderValues = 2;
    bool buyNoMoreThanAmountB = 3;
    uint32 marginSplit = 4;
    uint32 v = 5;
    bytes r = 6;
    bytes s = 7;
}

message CutoffFunction {
    bytes cutoff = 1;
}

message CutoffPairFunction {
    bytes token1 = 1;
    bytes token2 = 2;
    bytes cutoff = 3;
}

message WethDepositFunction {
    bytes value = 1;
}

message WethWithdrawalFunction {
    bytes value = 1;
}

message ApproveFunction {
    bytes spender = 1;
    bytes value = 2;
}

message TransferFunction {
    bytes receiver = 1;
    bytes value = 2;
}

message TransferFromFunction {
    bytes from = 1;
    bytes to = 2;
    bytes value = 3;
}

///////////////////////////////////////////////////////
//
// abi events
//
///////////////////////////////////////////////////////

message RingMinedEvent {
    bytes ringIndex = 1;
    bytes ringhash = 2;
    bytes miner = 3;
    bytes feeRecipient = 4;
    UintArray orderInfoList = 5;
}

message OrderCancelledEvent {
    bytes orderHash = 1;
    bytes amountCancelled = 2;
}

message CutoffEvent {
    bytes address = 1;
    bytes cutoff = 2;
}

message CutoffPairEvent {
    bytes address = 1;
    bytes token1 = 2;
    bytes token2 = 3;
    bytes cutoff = 4;
}

message TokenRegisteredEvent {
    bytes token = 1;
    string symbol = 2;
}

message TokenUnRegisteredEvent {
    bytes token = 1;
    string symbol = 2;
}

message AddressAuthorizedEvent {
    bytes protocol = 1;
    int32 number = 2;
}

message AddressDeAuthorizedEvent {
    bytes protocol = 1;
    int32 number = 2;
}

message WethDepositEvent {
    bytes dstAddress = 1;
    bytes value = 2;
}

message WethWithdrawalEvent {
    bytes srcAddress = 1;
    bytes value = 2;
}

message TransferEvent {
	bytes from = 1;
	bytes to = 2;
	bytes value = 3;
}

message ApprovalEvent {
    bytes owner = 1;
    bytes spender = 2;
    bytes value = 3;
}
